feat: add stop/pause execution feature
